@@ -4,6 +4,7 @@ import com.group5.firstpassport.entity.UserEntity;
 import com.group5.firstpassport.repository.UserRepository;
 import com.group5.firstpassport.service.IUserService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -11,6 +12,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 
 @Service
@@ -26,10 +28,9 @@ public class UserServiceImpl implements IUserService, UserDetailsService {
         UserEntity userEntity = userRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + username));
 
-
         return new User(userEntity.getUsername(),
                 userEntity.getPassword(),
-                Collections.emptyList());
+                List.of(new SimpleGrantedAuthority("ROLE_" + userEntity.getRole().name())));
     }
 
 
